0.6.2
  Added in-world notification system; it's not quite perfect.
  Fixed problem placing certain items related to forge update.
  The proper battery now shows up in NEI.

0.6.1
  Using forge 272

0.6.0
  Grinder recipe no longer uses dark iron.
  Excorsized demons. 
  Rewrote the energy net. 3rd time's the charm?


0.5.6
  Initing earlier will hopefully prevent a different BC facade crash.

0.5.5
  Re-arranged the config.
  Added a config setting to disable TE rendering
  Added inverium with a temporary recipe. Inverium will be used in the crystallizer to obtain exotic materials
  Added an angular saw. It requires a battery in your inventory, and has silk touch for (vanilla) ores.
  Diamond, redstone, and lapis ores can now be ground up.
  Fixed the BC errors probably
  Fixed the GL errors


0.5.4
  Fixed recharging batteries

0.5.3
  Added another slab recipe
  Fixed barrel recipe
  Fixed barrel lighting
  Wrath forges will only burn what's directly adjacent to the flame, making them 433% cooler.
  Changed charge propagation. Long distances should work now.
  Blowing up a diamond block now gives you 18 diamond shards instead of 12

0.5.0 -- Electrically Charged!
  Ported to Minecraft 1.3!
  Due to concurrency & laziness issues, the client will dynamically pick an additional block ID if possible. The block will be used only for rendering. I don't anticipate it causing problems with other mods. If you've somehow managed to use up all 4096 or so other block IDs, the real Factorization block will be used instead; this would cause occasional rendering glitches when using the integrated server.
  The pocket crafting table & bag of holding now respond to key presses only if they are not otherwise handled. BWAH-HA-HA-HA-HA!
  The barrel renders blocks much nicer now.
  Wrath lamp recipe is now 4 dark iron & 2 silver.